--- a/unpublishedScripts/marketplace/appTemplate/html/template.css
+++ b/unpublishedScripts/marketplace/appTemplate/html/template.css
@@ -204,6 +204,11 @@ input[type=number] {
         margin-bottom: -4px;
     }
 
+input:disabled {
+    background-color: #383838;
+    color: #afafaf;
+}
+
 input:focus {
     color: #fff;
     background-color: #000;
